Added swagger doc for company. Models with null.Type have wrong type
