# src/docs/swagger.yaml
@@ -1,4 +1,89 @@
 basePath: /
+definitions:
+  db.Company:
+    properties:
+      adress:
+        type: string
+      city:
+        type: string
+      contact_firstname:
+        type: string
+      contact_lastname:
+        type: string
+      contact_number:
+        type: string
+      country:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      latitude:
+        type: string
+      longitude:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+      post_code:
+        type: string
+      verified:
+        type: string
+    type: object
+  db.CompanyPublic:
+    properties:
+      adress:
+        type: string
+      city:
+        type: string
+      country:
+        type: string
+      id:
+        type: string
+      latitude:
+        type: string
+      longitude:
+        type: string
+      name:
+        type: string
+      post_code:
+        type: string
+    type: object
+  db.Distance:
+    properties:
+      distance:
+        type: integer
+      latMax:
+        type: number
+      latMin:
+        type: number
+      latitude:
+        type: number
+      lonMax:
+        type: number
+      lonMin:
+        type: number
+      longitude:
+        type: number
+      r:
+        type: number
+    type: object
+  db.Slot:
+    properties:
+      company_id:
+        type: string
+      day:
+        type: string
+      end_time:
+        type: string
+      id:
+        type: string
+      max:
+        type: string
+      start_time:
+        type: string
+    type: object
 info:
   contact:
     email: ad5880mu-s@student.lu.se
@@ -10,16 +95,188 @@ info:
   version: "1.0"
 paths:
   /company:
+    get:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.CompanyPublic'
+            type: array
+      summary: Gets all CompanyPublic from database
+    patch:
+      parameters:
+      - description: Company
+        in: body
+        name: company
+        required: true
+        schema:
+          $ref: '#/definitions/db.Company'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.Company'
+      summary: Updates a company in the database, then returns the updated company.
+        Requires authorization.
     post:
       parameters:
-      - description: User ID
-        in: path
-        name: id
+      - description: Company
+        in: body
+        name: company
         required: true
-        type: integer
+        schema:
+          $ref: '#/definitions/db.Company'
       produces:
       - application/json
       responses:
         "200": {}
       summary: Adds a company to the database
+  /company/distance:
+    post:
+      parameters:
+      - description: Distance
+        in: body
+        name: distance
+        required: true
+        schema:
+          $ref: '#/definitions/db.Distance'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.Company'
+            type: array
+      summary: Gets companies within a certain distance.
+  /company/info:
+    get:
+      parameters:
+      - description: Token
+        in: header
+        name: authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.Company'
+      summary: Gets a full company by id, no password required. Requires authorization.
+  /company/login:
+    post:
+      parameters:
+      - description: Company
+        in: body
+        name: company
+        required: true
+        schema:
+          $ref: '#/definitions/db.Company'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Returns "success" and token as body. Also sets cookie with
+            token.
+        "401":
+          description: Unauthorized
+      summary: Takes in a company as parameter, looks for password hash in database.
+  /company/slots:
+    get:
+      parameters:
+      - description: Company
+        in: body
+        name: company
+        required: true
+        schema:
+          $ref: '#/definitions/db.Company'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.Slot'
+            type: array
+      summary: Gets all slots for a certain company. Requires authorization.
+    patch:
+      parameters:
+      - description: Slot
+        in: body
+        name: slot
+        required: true
+        schema:
+          $ref: '#/definitions/db.Slot'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.Slot'
+      summary: Updates a certain slot, then returns updated slot. Requires authorization.
+    post:
+      parameters:
+      - description: Slots
+        in: body
+        name: slots
+        required: true
+        schema:
+          items:
+            $ref: '#/definitions/db.Slot'
+          type: array
+      produces:
+      - application/json
+      responses:
+        "200": {}
+      summary: Adds slots to database. Requires authorization.
+  /company/slots/id:
+    get:
+      parameters:
+      - description: Slot
+        in: body
+        name: slot
+        required: true
+        schema:
+          $ref: '#/definitions/db.Slot'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.Slot'
+      summary: Gets a full slot. Requires a slot as parameter, but an id in body will
+        suffice.
+  /company/verify:
+    post:
+      parameters:
+      - description: Company
+        in: body
+        name: company
+        required: true
+        schema:
+          $ref: '#/definitions/db.Company'
+      - description: Ticket code
+        in: query
+        name: code
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Ticket was verified.
+        "401":
+          description: Ticket could not be verified.
+      summary: Verifies a ticket code for a company. Requires authorization.
 swagger: "2.0"
